maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:29: error: ':' expected but ',' found.
def markExit(exitX, exitY) {
                  ^ShortestPathMaze:74: error: identifier expected but '}' found.
}
^